# nexgl

./: .gitmodules  CMakeLists.txt  README.MD
cmake/: app_post.cmake  other_post.cmake  vita_post.cmake  vita_pre.cmake
inc/: nex.hpp
inc/nex/core/: all.hpp  asset.hpp  assetmanager.hpp  audio.hpp  cursor.hpp  defines.hpp  delta.hpp  file.hpp  inputmanager.hpp  random.hpp  state.hpp  timer.hpp
inc/nex/gl/: all.hpp  defines.hpp  rendertexture.hpp  window.hpp
inc/nex/gl/assets/: shader.hpp  texture.hpp  texturearray.hpp
inc/nex/gl/mtsdf/: font.hpp  text.hpp
inc/nex/prefabs/: all.hpp  sprite.hpp  spriteatlas.hpp  timer.hpp  vertexdata.hpp
lib/: CMakeLists.txt  sdl3.cmake  stb_image.cmake  tomlplusplus.cmake
lib/glad_gles2/: CMakeLists.txt
lib/glad_gles2/inc/glad/: glad.h
lib/glad_gles2/src/: glad.c
src/core/: assetmanager.cpp  audio.cpp  cursor.cpp  delta.cpp  file.cpp  inputmanager.cpp  state.cpp  timer.cpp
src/gl/: defines.cpp  rendertexture.cpp  window.cpp
src/gl/assets/: shader.cpp  texture.cpp  texturearray.cpp
src/gl/mtsdf/: font.cpp  text.cpp
src/prefabs/: sprite.cpp  spriteatlas.cpp  timer.cpp
